--- a/service-front/public/assets/v2/css/application.css
+++ b/service-front/public/assets/v2/css/application.css
@@ -2604,9 +2604,11 @@ input[disabled="disabled"] {
 
 .search-input {
   position: relative;
-  padding: 6px;
+  height: 39px;
   z-index: 3;
-  background-color: transparent; }
+  background-color: transparent;
+  -webkit-appearance: none;
+  box-sizing: border-box; }
   .search-input:focus, .search-input.focus {
     background-color: #fff; }
 
@@ -2622,11 +2624,8 @@ input[disabled="disabled"] {
   background-image: url(../images/icons/icon-search.png);
   background-size: 70%;
   text-indent: -5000px;
-  overflow: hidden; }
-  @media (max-width: 640px) {
-    .search-button {
-      width: 36px;
-      height: 34px; } }
+  overflow: hidden;
+  box-shadow: none; }
 
 .dashboard-search {
   margin: 30px 0;
